test/e2e/chainsaw/conversion_webhook/konnect-gateway-controlplane/00-konnect-gateway-controlplane.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ($kong_namespace)
---
apiVersion: konnect.konghq.com/v1alpha1
kind: KonnectAPIAuthConfiguration
metadata:
  name: ($konnect_api_auth_name)
  namespace: ($kong_namespace)
spec:
  type: token
  token: (env('KONNECT_TOKEN'))
  serverURL: (env('KONNECT_SERVER_URL') || 'eu.api.konghq.tech')
---
apiVersion: konnect.konghq.com/v1alpha1
kind: KonnectGatewayControlPlane
metadata:
  name: ($konnect_gateway_controlplane_name)
  namespace: ($kong_namespace)
spec:
  name: ($konnect_gateway_controlplane_name)
  konnect:
    authRef:
      name: ($konnect_api_auth_name)
